Fixed title alignment.

--- a/assets/css/dashboard/new-pa-message/select-stations-page.scss
+++ b/assets/css/dashboard/new-pa-message/select-stations-page.scss
@@ -34,6 +34,7 @@
       height: 40px;
       font-size: 20px;
       font-weight: 500;
+      line-height: 24px;
     }
 
     .station-groups-col {
